# birq

./: .gitignore  LICENCE  Makefile.am  README  balance.c  balance.h  birq.c  birq.h  configure.ac  cpu.c  cpu.h  cpu_parse.c  cpumask.h  hexio.c  hexio.h  irq.c  irq.h  irq_parse.c  log.c  log.h  nl.c  nl.h  numa.c  numa.h  proximity.c  proximity.h  pxm.c  pxm.h  statistics.c  statistics.h
doc/: birq.md
lub/: README  list.h  module.am
lub/list/: list.c  module.am  private.h
lub/log/: log.c  module.am
